src/test/ui/issue-40402-ref-hints/issue-40402-1.stderr
error[E0507]: cannot move out of indexed content
  --> $DIR/issue-40402-1.rs:19:13
   |
LL |     let e = f.v[0]; //~ ERROR cannot move out of indexed content
   |             ^^^^^^
   |             |
   |             cannot move out of indexed content
   |             help: consider using a reference instead: `&f.v[0]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
